<resources>
    <string name="app_name">Mentalab Explore</string>
    <string name="connect_description_text">Connect a device to start</string>
    <string name="skip_text">Skip</string>
    <string name="exg_tab_text">ExG</string>
    <string name="sensor_tab_text">Sensors</string>
    <string name="other_tab_text">Impedance</string>
    <string name="temperature">22°</string>
    <string name="connectedDevice">Connected to: Explore_????</string>
    <string name="battery">90%</string>
    <string name="settings">Settings</string>
    <string name="device_settings">Device Settings</string>
    <string name="active_channels">Active channels</string>
    <string name="sample_rate">Sample rate</string>
    <string name="channel_1">Channel 1</string>
    <string name="channel_2">Channel 2</string>
    <string name="channel_3">Channel 3</string>
    <string name="channel_4">Channel 4</string>
    <string name="active_modules">Active modules</string>
    <string name="firmware_version">Firmware version</string>
    <string name="firmware_version_number">v??.??.??</string>
    <string name="about_device">About device</string>
    <string name="data_settings">Data settings</string>
    <string name="import_data">Import data</string>
    <string name="testButtonName">Button</string>
    <string name="disconnect_device">Disconnect device</string>
    <string name="connect_to_a_device">Connect to a device</string>
    <string name="bluetooth_settings">Bluetooth settings</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="upload">Upload</string>
    <string name="apply">Apply</string>
    <string name="fun_text">Fun text</string>
    <string name="cancel">Cancel</string>
    <string name="rescan">Rescan</string>
    <string name="ch2">ch2</string>
    <string name="ch1">ch1</string>
    <string name="ch3">ch3</string>
    <string name="ch4">ch4</string>
    <string name="ch5">ch5</string>
    <string name="ch6">ch6</string>
    <string name="ch7">ch7</string>
    <string name="ch8">ch8</string>
    <string name="g">G</string>
    <string name="a">A</string>
    <string name="m">M</string>
    <string name="channel_5">Channel 5</string>
    <string name="channel_6">Channel 6</string>
    <string name="channel_7">Channel 7</string>
    <string name="channel_8">Channel 8</string>
    <string name="delete_device_memory">Delete device memory</string>
    <string name="delete">DELETE</string>
    <string name="visualization_settings">Visualization settings</string>
    <string name="exg_chart_settings">ExG chart settings</string>
    <string name="general_chart_settings">General chart settings</string>
    <string name="marker_settings">Marker settings</string>
</resources>