<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ACACAC"
    android:backgroundTint="#FFFFFF"
    tools:context=".Settings">

    <include layout="@layout/main_toolbar" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="673dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp"
                android:text="@string/settings"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="4dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:text="@string/device_settings"
                android:textColor="#00BCD4"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="32dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="4dp"
                    android:text="@string/sample_rate"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:background="#BBBBBB"
                    android:spinnerMode="dropdown"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="32dp"
                android:paddingTop="4dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:text="@string/active_channels"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="4dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:switchPadding="32dp"
                android:text="@string/channel_1"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="4dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:switchPadding="32dp"
                android:text="@string/channel_2"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="4dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:switchPadding="32dp"
                android:text="@string/channel_3"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck" />

            <Switch
                android:id="@+id/switch5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="4dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:switchPadding="32dp"
                android:text="@string/channel_4"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="32dp"
                android:paddingTop="4dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:text="@string/active_modules"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switch6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="4dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:switchPadding="32dp"
                android:text="@string/exg_tab_text"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck" />

            <Switch
                android:id="@+id/switch7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="4dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:switchPadding="32dp"
                android:text="@string/sensor_tab_text"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck" />

            <Switch
                android:id="@+id/switch8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="4dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:switchPadding="32dp"
                android:text="@string/other_tab_text"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:text="@string/about_device"
                android:textColor="#00BCD4"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="32dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="4dp"
                    android:text="@string/firmware_version"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="32dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="4dp"
                    android:text="@string/firmware_version_number"
                    android:textAlignment="viewEnd"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:text="@string/data_settings"
                android:textColor="#00BCD4"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="4dp"
                    android:text="@string/import_data"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="@string/testButtonName"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="4dp"
                android:text="@string/bluetooth_settings"
                android:textColor="#00BCD4"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="4dp"
                    android:text="@string/connect_to_a_device"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/testButtonName"
                    android:textSize="12sp"
                    android:onClick="findDevices"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="4dp"
                    android:text="@string/disconnect_device"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/testButtonName"
                    android:textSize="12sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="applySettings"
                android:text="@string/apply" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>