<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/exg_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/exg_channel_container_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:text="@string/ch1"
                android:background="@drawable/rounded_corners_label"
                />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>

            <com.example.mentalabexplore.LineChart
                android:id="@+id/exg_channel_1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="@dimen/rounded_corner_tight">
            </com.example.mentalabexplore.LineChart>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/exg_channel_container_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:text="@string/ch2"
                android:backgroundTint="@color/teal_200"
                android:background="@drawable/rounded_corners_label" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>

            <com.example.mentalabexplore.LineChart
                android:id="@+id/exg_channel_2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="8dp">
            </com.example.mentalabexplore.LineChart>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/exg_channel_container_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:text="@string/ch3"
                android:backgroundTint="@color/teal_200"
                android:background="@drawable/rounded_corners_label" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>

            <com.example.mentalabexplore.LineChart
                android:id="@+id/exg_channel_3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="8dp">
            </com.example.mentalabexplore.LineChart>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/exg_channel_container_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:text="@string/ch4"
                android:backgroundTint="@color/teal_200"
                android:background="@drawable/rounded_corners_label" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>

            <com.example.mentalabexplore.LineChart
                android:id="@+id/exg_channel_4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="8dp">
            </com.example.mentalabexplore.LineChart>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/exg_channel_container_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:text="@string/ch5"
                android:backgroundTint="@color/teal_200"
                android:background="@drawable/rounded_corners_label" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>

            <com.example.mentalabexplore.LineChart
                android:id="@+id/exg_channel_5"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="8dp">
            </com.example.mentalabexplore.LineChart>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/exg_channel_container_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:text="@string/ch6"
                android:backgroundTint="@color/teal_200"
                android:background="@drawable/rounded_corners_label" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>

            <com.example.mentalabexplore.LineChart
                android:id="@+id/exg_channel_6"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="8dp">
            </com.example.mentalabexplore.LineChart>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/exg_channel_container_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:text="@string/ch7"
                android:backgroundTint="@color/teal_200"
                android:background="@drawable/rounded_corners_label" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>

            <com.example.mentalabexplore.LineChart
                android:id="@+id/exg_channel_7"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="8dp">
            </com.example.mentalabexplore.LineChart>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/exg_channel_container_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:text="@string/ch8"
                android:backgroundTint="@color/teal_200"
                android:background="@drawable/rounded_corners_label" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>

            <com.example.mentalabexplore.LineChart
                android:id="@+id/exg_channel_8"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="8dp">
            </com.example.mentalabexplore.LineChart>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp"
            />

    </LinearLayout>
</ScrollView>